<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rut">RUT</string>
    <string name="name">Nombre</string>
    <string name="age">Edad</string>
    <string name="find">Buscar</string>
    <string name="save">Guardar</string>
    <string name="description">Descripción</string>
</resources>