<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <EditText
        android:id="@+id/txt_rut"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/rut"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/rut" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="248dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rut"
        android:autofillHints="@string/name" />

    <EditText
        android:id="@+id/txt_age"
        android:layout_width="252dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        android:autofillHints="@string/age" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="146dp"
        android:layout_height="53dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:onClick="SaveData"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtError" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="149dp"
        android:layout_height="56dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:onClick="FindUser"
        android:text="@string/find"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_age" />
</androidx.constraintlayout.widget.ConstraintLayout>